--- a/WebApplication1/WebAPI.csproj
+++ b/WebApplication1/WebAPI.csproj
@@ -15,5 +15,9 @@
     <ProjectReference Include="..\Entitiy\Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
 
 </Project>
