--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "ilhan@ilhan.com",
+    "Issuer": "ilhan@ilhan.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
